--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,13 @@
     </style>
   </head>
   <body>
-    <div class='container'>
-      <h1>It works!</h1>
-      <div>
-        <span>You're ready to start!</span>
-        <span>Skeleton 2, jQuery 2, and AWS Libraries are included.</span>
+    <div class='markup'>
+      <div class='container'>
+        <h1>It works!</h1>
+        <div>
+          <span>You're ready to start!</span>
+          <span>Skeleton 2, jQuery 2, and AWS Libraries are included.</span>
+        </div>
       </div>
     </div>
   </body>
